Added references to WMS and WFS